--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.karlstewart.dogseeker">
 
@@ -7,6 +8,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity
+            android:name=".HelpActivity"
+            android:screenOrientation="sensorLandscape" />
+        <activity
+            android:name=".OptionsActivity"
+            android:screenOrientation="sensorLandscape" />
+        <activity
+            android:name=".GamerActivity"
+            android:screenOrientation="sensorLandscape" />
+        <activity
+            android:name=".MenuActivity"
+            android:screenOrientation="sensorLandscape" />
+        <activity
+            android:name=".SplashActivity"
+            android:screenOrientation="sensorLandscape">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
